--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My NFT Card</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 <body>
     <div class="container">
@@ -19,7 +20,7 @@
         <div class="price-time">
             <div class="left">
                 <p><img src="./images/icon-ethereum.svg" class="eth" alt="eth"><span class="
-                    price"> 0.041ETH</span></p>
+                    price"> 0.041 ETH</span></p>
         </div>
         <div class="right">
             <p><img src="./images/icon-clock.svg" class="clock" alt="clock"><span class="time">3 days left </span></p>
